kubernates/manifests/networkapp_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: networkapp
  name: networkapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: networkapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: networkapp
    spec:
      containers:
      - image: nouraldeen152/networkapp:19
        name: networkapp
        ports:
        - containerPort: 8000
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: networkapp-svc
  name: networkapp-svc
spec:
  selector:
    app: networkapp
  # type: NodePort
  ports:
  - port: 8000  
    protocol: TCP
    targetPort: 8000
    # nodePort: 30007
status:
  loadBalancer: {}
